Bug 112109 - Sections inside nested tables on page boundaries crash
Summary: Sections inside nested tables on page boundaries crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-08-30 15:24 UTC by Miklos Vajna
Modified: 2017-08-31 13:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Reproducer document. (11.57 KB, application/vnd.oasis.opendocument.text-flat-xml)
2017-08-30 15:24 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2017-08-30 15:24:15 UTC
Created attachment 135874 [details]
Reproducer document.

Steps to reproduce:

1) Open the attached bugdoc
2) Observe that it has a nested table, and the nested table has sections in it. The nested table is also at a page boundary, so it's split.

Expected result: both the outer and the inner table gets split at the page boundary.

Actual result: crash.

This seems to be a regression from f8a76d218305a56d15b82b9dac4fafa558872780.
Comment 1 Xisco Faulí 2017-08-30 20:22:41 UTC
Reproduced in

Version: 6.0.0.0.alpha0+
Build ID: 78960ad06faca055a6d97afbc764c902d5d07f6f
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-08-30_06:31:19
Locale: es-ES (es_ES); Calc: group
Comment 2 Commit Notification 2017-08-31 13:24:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3d1bb76ebf5c51141018cfd76eccdb63472de8de

tdf#112109 sw: split section frames inside table cells, ignore nested tables

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.